--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,6 @@ Collate: adaptRefQuantiles.R as.methylumi.R beta1.R Beta2M.R betaqn.R
         preprocessIlluminaMethylation.R referenceQuantiles.R
         robustQuantileNorm_Illumina450K.probeCategories.R
         robustQuantileNorm_Illumina450K.R seabird.R sextest.R summits.R
-        swan2.R uniqueAnnotationCategory.R qual.R AllGenerics.R x_methylumi.R
+        swan2.R uniqueAnnotationCategory.R AllGenerics.R x_methylumi.R
         y_minfi.R z_IMA.R
 
